[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/TitleScreen/Controls/ControlsControl.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Flat-it - BioSans-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/TitleScreen/BG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/JetBrainsMono-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/TitleScreen/Controls/Button.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Decorative/Crystal/Crystal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/TitleScreen/TextButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Images/Particle.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 288
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

float grid(vec2 uv, float velocity, float iTime)
{
    vec2 size = vec2(uv.y, uv.y * uv.y * 0.2) * 0.01;
    uv += vec2(0.0, iTime * 4.0 * (velocity + 0.05));
    uv = abs(fract(uv) - 0.5);
 	vec2 lines = smoothstep(size, vec2(0.0), uv);
 	lines += smoothstep(size * 5.0, vec2(0.0), uv) * 0.4 * velocity;
    return clamp(lines.x + lines.y, 0.0, 3.0);
}


void fragment()
{
    vec2 uv = (2.0 * FRAGCOORD.xy.xy - (1.0 / SCREEN_PIXEL_SIZE).xy)/(1.0 / SCREEN_PIXEL_SIZE).y;
    float velocity = 1.0;
   
    {
        // Grid
//        vec3 col = vec3(0.0, 0.1, 0.2);
		vec3 col = texture(SCREEN_TEXTURE, SCREEN_UV).rgb;
        if (uv.y < -0.2)
        {
            uv.y = 3.0 / (abs(uv.y + 0.2) + 0.05);
            uv.x *= uv.y * 1.0;
            float gridVal = grid(uv, velocity, TIME);
            col = mix(col, vec3(0.4, 0.5, 1.3), gridVal);
        }
        else
        {
            uv.y -= velocity * 1.1 - 0.51;
        }

        col = mix(vec3(col.r, col.r, col.r) * 0.5, col,  0.7);

        COLOR = vec4(col,1.0);
    }
      
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 128
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="GDScript" id=9]
script/source = "tool
extends Label


const BLUE = Color(0.65, 1.0, 0.99, 1.0)

#onready var hoverSound = $HoverSound
#onready var clickSound = $ClickSound
onready var animPlayer = $AnimationPlayer

signal TextButton_Pressed


func _ready():
	set_process(true)


func _process(_delta):
	if Engine.editor_hint:
		rect_pivot_offset = rect_size/2.0

	if not Engine.editor_hint:
		set_process(false)


func _on_Button_pressed():
#	clickSound.play()
	if not Engine.editor_hint:
		emit_signal(\"TextButton_Pressed\")


func _on_Button_mouse_entered():
#	hoverSound.play()
	if not Engine.editor_hint:
		animPlayer.play(\"hover\")


func _on_Button_mouse_exited():
	if not Engine.editor_hint:
		animPlayer.play(\"unhover\")
"

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.329412, 1, 0.980392, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonts/Flat-it - BioSans-Regular.otf"

[sub_resource type="DynamicFont" id=10]
size = 128
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 20
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 112
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 20
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 112
use_mipmaps = true
use_filter = true
extra_spacing_char = 42
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 112
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 20
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.329412, 1, 0.980392, 1 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="DynamicFont" id=16]
size = 80
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 10
font_data = SubResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_and_Lights" type="CanvasLayer" parent="."]

[node name="BG" parent="BG_and_Lights" instance=ExtResource( 3 )]

[node name="Node2D" type="Node2D" parent="BG_and_Lights"]
position = Vector2( 1128, 240 )
scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Crystal" parent="BG_and_Lights/Node2D" instance=ExtResource( 6 )]
position = Vector2( -15, 0 )

[node name="Crystal" parent="BG_and_Lights/Node2D/Crystal" index="0"]
energy = 2.0
range_layer_max = 1

[node name="Crystal2" parent="BG_and_Lights/Node2D" instance=ExtResource( 6 )]
position = Vector2( 1331, 0 )

[node name="Crystal" parent="BG_and_Lights/Node2D/Crystal2" index="0"]
energy = 2.0
range_layer_max = 1

[node name="CONTROLS" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -695.0
margin_top = 64.0
margin_right = 695.0
margin_bottom = 419.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "CONTROLS"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 7 )]
margin_left = 104.0
margin_top = 64.0
margin_right = 488.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 192, 106 )
text = "back"

[node name="LayoutPresetButton" parent="." instance=ExtResource( 7 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1480.0
margin_top = -544.0
margin_right = 2019.0
margin_bottom = -374.0
rect_pivot_offset = Vector2( 269.5, 85 )
custom_fonts/font = SubResource( 8 )
text = "DEFUALT"
align = 0
script = SubResource( 9 )

[node name="Panel" type="Panel" parent="LayoutPresetButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_right = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutPresetLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = -600.0
margin_right = 1369.0
margin_bottom = -338.0
rect_pivot_offset = Vector2( 368, 131 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = -16
custom_constants/shadow_offset_y = 7
text = "Layout Preset: "
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WASD_Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 440.0
margin_top = -408.0
margin_right = 1176.0
margin_bottom = -146.0
rect_pivot_offset = Vector2( 368, 131 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = -16
custom_constants/shadow_offset_y = 7
text = "MOVEMENT"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WASD" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 688.0
margin_top = -192.0
margin_right = 975.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.65, 1, 0.99, 0.1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = -16
custom_constants/shadow_offset_y = 7
text = " w
asd"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ARROWS_LABEL" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1072.0
margin_top = -256.0
margin_right = 1808.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 368, 131 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = -16
custom_constants/shadow_offset_y = 7
text = "Aiming"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ARROWKEYS" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1272.0
margin_top = -72.0
margin_right = 1600.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.65, 1, 0.99, 0.1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = -50
custom_constants/shadow_offset_y = 7
text = "↑
←•→
↓"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 256, 704, 1328, 704 )
default_color = Color( 0.329412, 1, 0.980392, 1 )

[node name="Line2D4" type="Line2D" parent="."]
position = Vector2( 2288, 0 )
points = PoolVector2Array( 280, 704, 1288, 704 )
default_color = Color( 0.329412, 1, 0.980392, 1 )

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 0, 176 )
points = PoolVector2Array( 640, 704, 1024, 704 )
default_color = Color( 0.329412, 1, 0.980392, 1 )

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2( 608, 328 )
points = PoolVector2Array( 640, 704, 1024, 704 )
default_color = Color( 0.329412, 1, 0.980392, 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1496.0
margin_top = -536.0
margin_right = -1346.0
margin_bottom = -386.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 142.0
margin_bottom = 142.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 20 )
toggle_mode = true
expand_icon = true
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Button"]
modulate = Color( 0.329412, 1, 0.980392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 16.0
margin_right = -14.0
margin_bottom = -16.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AimToShootLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 2488.0
margin_top = -600.0
margin_right = 3657.0
margin_bottom = -338.0
rect_pivot_offset = Vector2( 368, 131 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = -16
custom_constants/shadow_offset_y = 7
text = "Aim To Shoot"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AimToShootDescriptionLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 2576.0
margin_top = -336.0
margin_right = 3745.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 368, 131 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.65, 1, 0.99, 0.1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = -16
custom_constants/shadow_offset_y = 7
text = "Ship will shoot
Automatically when
aiming. else, use
SPACE to shoot"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="TextButton_Pressed" from="BackButton" to="." method="_on_BackButton_TextButton_Pressed"]
[connection signal="TextButton_Pressed" from="LayoutPresetButton" to="." method="_on_LayoutPresetButton_TextButton_Pressed"]
[connection signal="toggled" from="PanelContainer/Button" to="PanelContainer/Button" method="_on_Button_toggled"]

[editable path="BG_and_Lights/Node2D/Crystal"]
[editable path="BG_and_Lights/Node2D/Crystal2"]
